--- a/css/index.css
+++ b/css/index.css
@@ -65,9 +65,16 @@ td, th {
 	text-align: center;
 }
 
+
+
 th{
 	font-weight: bold;
 	background-color: #EEE;
+}
+
+tr{
+	opacity: 100%;
+	transition: 0.5s;
 }
 
 label{
@@ -135,4 +142,20 @@ button[disabled=disabled], button:disabled {
 
 .paciente-invalido {
     background-color: lightcoral;
+}
+
+#mensagens-erro{
+	color: red;
+}
+
+.fade-out{
+	
+	opacity: 0;
+	transition: 0.5s;
+}
+
+#filtrar-tabela{
+	width: 200px;
+	height: 35px;
+	margin-bottom: 10px;
 }
